[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-import-repro"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]

dev_normal = [
  "pyspark==4.1.0",
  "pytest",
  "pytest-cov",
  "databricks-bundles==0.281.0",
  "mlflow>=2.19.0",
  "databricks-dlt",
]

dev_dlt_first = [
  "databricks-dlt",
  "pytest",
  "pytest-cov",
  "databricks-bundles==0.281.0",
  "mlflow>=2.19.0",
  "pyspark==4.1.0",
]

dev_no_spark = [
  "pytest",
  "pytest-cov",
  "databricks-bundles==0.281.0",
  "mlflow>=2.19.0",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
